@@ -55,6 +55,14 @@
   </li>
 </ul>
 
+<h2>LilyPond Snippet Repository</h2>
+
+The <a href="http://lsr.dsi.unimi.it/">Lilypond Snippet
+Repository (LSR)</a> is a searchable database of Lilypond code
+snippets.  Users may view, search, and contribute their own
+small snippets of LilyPond code.
+
+
 <h2>Local documentation</h2>
 
 Documentation is installed in
