@@ -1,3 +1,7 @@
+2005-05-31  Graham Percival  <gperlist@shaw.ca>
+
+	* site/documentation.html: add link to LSR.
+
 2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* README: reorganize a bit, use <MY-LANGUAGE> for nl.
